[gd_scene load_steps=2 format=3 uid="uid://ccf2ig23ak528"]

[ext_resource type="Script" path="res://enemy_spawner.gd" id="1_4i1na"]

[node name="Enemy_Spawner" type="Node2D"]
script = ExtResource("1_4i1na")

[node name="spawn_time" type="Timer" parent="."]
wait_time = 3.5
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="timeout" from="spawn_time" to="." method="_on_spawn_time_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
